--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
+    implementation 'com.xwray:groupie:2.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
 apply plugin: 'com.google.gms.google-services'
