added validations in register activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
     implementation 'com.xwray:groupie:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'io.saeid:fab-loading:1.0.0'
+    implementation 'com.roger.catloadinglibrary:catloadinglibrary:1.0.4'
+    implementation 'io.supercharge:funnyloader:0.2.0'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
