fixed orientation to portrait only

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,23 +9,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".messages.LatestMessagesActivity">
+        <activity
+            android:name=".messages.LatestMessagesActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".registerlogin.RegisterActivity">
+        <activity
+            android:name=".registerlogin.RegisterActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".registerlogin.LoginActivity">
+        <activity
+            android:name=".registerlogin.LoginActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".messages.NewMessageActivity">
+        <activity
+            android:name=".messages.NewMessageActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".messages.LatestMessagesActivity"/>
         </activity>
-        <activity android:name=".messages.ChatLogActivity">
+        <activity
+            android:name=".messages.ChatLogActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".messages.LatestMessagesActivity"/>
