--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.wang.avi:library:2.1.3'
 
+    implementation 'com.android.support:design:28.0.0-rc01'
 }
 apply plugin: 'com.google.gms.google-services'
