--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,7 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
 
     implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
