fixed camera image rotation bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity
             android:name=".registerlogin.RegisterActivity"
+            android:configChanges="orientation|keyboard|screenSize"
             android:screenOrientation="portrait">
         </activity>
         <activity
