--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,13 @@ androidExtensions {
     experimental = true
 }
 
+def config = rootProject.extensions.getByName("ext")
 android {
-    compileSdkVersion 28
+    compileSdkVersion config["compileSdkVersion"]
     defaultConfig {
         applicationId "com.anshdeep.kotlinmessenger"
-        minSdkVersion 19
-        targetSdkVersion 28
+        minSdkVersion config["minSdkVersion"]
+        targetSdkVersion config["targetSdkVersion"]
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -28,26 +29,29 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation config.commonDependency.kotlin
+    implementation config.commonDependency.supportLib
+    implementation config.commonDependency.designSupportLib
+    implementation config.commonDependency.constraintLayout
 
-    implementation 'com.google.firebase:firebase-core:16.0.0'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-storage:16.0.1'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    testImplementation config.commonDependency.jUnit
+    androidTestImplementation config.commonDependency.testRunner
+    androidTestImplementation config.commonDependency.espressoCore
 
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
-    implementation 'com.xwray:groupie:2.1.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.wang.avi:library:2.1.3'
 
-    implementation 'com.android.support:design:28.0.0-rc01'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    //Firebase dependency
+    implementation config.firebaseDependency.firebaseCore
+    implementation config.firebaseDependency.firebaseAuth
+    implementation config.firebaseDependency.firebaseStorage
+    implementation config.firebaseDependency.firebaseDatabase
+
+    implementation config.commonDependency.circleimageview
+    implementation config.commonDependency.recyclerView
+    implementation config.commonDependency.xwrayGroupie
+    implementation config.commonDependency.picasso
+    implementation config.commonDependency.wangAvi
+    implementation config.commonDependency.glide
+    annotationProcessor config.commonDependency.glideCompiler
+
 }
 apply plugin: 'com.google.gms.google-services'
