--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,47 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext{
+    compileSdkVersion = 28
+    targetSdkVersion = 28
+    minSdkVersion = 19
+    supportLibVer = '28.0.0'
+    constraintLayoutVer = '1.1.2'
+    jUnitVer = '4.12'
+    testRunnerVer = '1.0.2'
+    espressoCoreVer = '3.0.2'
+    firebaseVer = '16.0.4'
+    circleImageViewVer = '2.2.0'
+    xwrayGroupieVer = '2.1.0'
+    picassoVer = '2.71828'
+    wangAviVer = '2.1.3'
+    glideVer = '4.8.0'
+
+
+
+    commonDependency =[
+            kotlin: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}",
+            supportLib: "com.android.support:appcompat-v7:${supportLibVer}",
+            designSupportLib: "com.android.support:design:${supportLibVer}",
+            recyclerView: "com.android.support:recyclerview-v7:${supportLibVer}",
+            constraintLayout: "com.android.support.constraint:constraint-layout:${constraintLayoutVer}",
+            jUnit: "junit:junit:${jUnitVer}",
+            testRunner: "com.android.support.test:runner:${testRunnerVer}",
+            espressoCore: "com.android.support.test.espresso:espresso-core:${espressoCoreVer}",
+            circleimageview: "de.hdodenhof:circleimageview:${circleImageViewVer}",
+            xwrayGroupie: "com.xwray:groupie:${xwrayGroupieVer}",
+            picasso: "com.squareup.picasso:picasso:${picassoVer}",
+            wangAvi: "com.wang.avi:library:${wangAviVer}",
+            glide: "com.github.bumptech.glide:glide:${glideVer}",
+            glideCompiler: "com.github.bumptech.glide:compiler:${glideVer}",
+
+    ]
+    firebaseDependency =[
+            firebaseCore: "com.google.firebase:firebase-core:${firebaseVer}",
+            firebaseAuth: "com.google.firebase:firebase-auth:${firebaseVer}",
+            firebaseStorage: "com.google.firebase:firebase-storage:${firebaseVer}",
+            firebaseDatabase: "com.google.firebase:firebase-database:${firebaseVer}",
+
+    ]
+}
