--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,16 +8,15 @@ androidExtensions {
     experimental = true
 }
 
-def config = rootProject.extensions.getByName("ext")
 android {
-    compileSdkVersion config["compileSdkVersion"]
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.anshdeep.kotlinmessenger"
-        minSdkVersion config["minSdkVersion"]
-        targetSdkVersion config["targetSdkVersion"]
+        minSdkVersion 19
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -29,29 +28,41 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation config.commonDependency.kotlin
-    implementation config.commonDependency.supportLib
-    implementation config.commonDependency.designSupportLib
-    implementation config.commonDependency.constraintLayout
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 
-    testImplementation config.commonDependency.jUnit
-    androidTestImplementation config.commonDependency.testRunner
-    androidTestImplementation config.commonDependency.espressoCore
+    // AndroidX Support Libraries
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // Testing
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    //Firebase dependency
-    implementation config.firebaseDependency.firebaseCore
-    implementation config.firebaseDependency.firebaseAuth
-    implementation config.firebaseDependency.firebaseStorage
-    implementation config.firebaseDependency.firebaseDatabase
+    // Firebase
+    implementation "com.google.firebase:firebase-core:17.0.1"
+    implementation "com.google.firebase:firebase-auth:18.1.0"
+    implementation "com.google.firebase:firebase-storage:18.1.0"
+    implementation "com.google.firebase:firebase-database:18.0.0"
 
-    implementation config.commonDependency.circleimageview
-    implementation config.commonDependency.recyclerView
-    implementation config.commonDependency.xwrayGroupie
-    implementation config.commonDependency.picasso
-    implementation config.commonDependency.wangAvi
-    implementation config.commonDependency.glide
-    annotationProcessor config.commonDependency.glideCompiler
+    // Circle Image View
+    implementation "de.hdodenhof:circleimageview:2.2.0"
+
+    // Groupie - for complex recycler views
+    implementation "com.xwray:groupie:2.1.0"
+
+    // Picasso
+    implementation "com.squareup.picasso:picasso:2.71828"
+    implementation "com.wang.avi:library:2.1.3"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.8.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
 
 }
 apply plugin: 'com.google.gms.google-services'
