--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v1
         with:
-          java_version: 1.8
+          java-version: 1.8
 
       - name: Run Tests
         run: ./gradlew test
